--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,8 @@ matplotlib==3.7.1
 seaborn==0.12.2
 networkx==3.1
 scikit-learn==1.3.0
-jupyter==1.0.0 
+jupyter==1.0.0
+torch==2.0.1
+torch-geometric==2.3.1
+gensim==4.3.1
+tqdm==4.65.0 
